access cookies and session storage

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <title>Clone and Connect</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Cookie Getter</title>
   </head>
   <body>
-  <h1>Clone Banner session</h1>
+    <button id="getCookies">Get Cookies</button>
+    <button id="getSessionStorage">Get Session Storage</button>
+    <script src="script.js"></script>
   </body>
-
 </html>
