add ablity to show hidden terms of the current year

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
         </div>
         <script src="script.js"></script>
       </div>
+      <div class="row mb-4 mt-5">
+        <button id="terms-btn" class="btn btn-secondary">
+          Just show hidden terms
+        </button>
+      </div>
     </div>
     <script src="bootstrap.bundle.min.js"></script>
   </body>
